--- a/reports/05_rf_classifier.html
+++ b/reports/05_rf_classifier.html
@@ -179,10 +179,11 @@ graph TD
   F --&gt; G["split into training and test set (80/20) on artist level to avoid data leakage"]
   G --&gt; H["train random forest imputer model for missing values on train sets (optional)"]
   H --&gt; I["impute missing values in training and test sets with corresponding imputation model (otional)"]
-  I --&gt; J["select predictors for modeling"]
-  J --&gt; K["undersample majority classes in training set to handle class imbalance (e.g., target class size = 10 * size of smallest class)"]
-  K --&gt; L["train initial random forest classifier on training sets (1k trees, mtry = sqrt(number of predictors), min.node.size = 1)"]
-  L --&gt; M["evaluate model performance on train and test sets (confusion matrix, accuracy, kappa, macro-F1, variable importance)"]
+  I --&gt; J["prepare cross validation split on artist level within training set (e.g., 5-fold, 2 repeats, optional)"]
+  J --&gt; K["select predictors for modeling"]
+  K --&gt; L["undersample majority classes in training set to handle class imbalance (e.g., target class size = 10 * size of smallest class)"]
+  L --&gt; M["train initial random forest classifier on training sets (1k trees, mtry = sqrt(number of predictors), min.node.size = 1)"]
+  M --&gt; N["evaluate model performance on train and test sets (confusion matrix, accuracy, kappa, macro-F1, variable importance)"]
 </pre>
 </div>
 <p></p></figure><p></p>
@@ -232,26 +233,26 @@ graph TD
 <tr class="odd">
 <td style="text-align: left;">low (10-15)</td>
 <td style="text-align: left;">Train</td>
-<td style="text-align: left;">29,699</td>
-<td style="text-align: left;">4,862</td>
+<td style="text-align: left;">149,441</td>
+<td style="text-align: left;">8,465</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">low (10-15)</td>
 <td style="text-align: left;">Test</td>
-<td style="text-align: left;">8,047</td>
-<td style="text-align: left;">1,218</td>
+<td style="text-align: left;">39,493</td>
+<td style="text-align: left;">2,119</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">high (25-30)</td>
 <td style="text-align: left;">Train</td>
-<td style="text-align: left;">30,284</td>
-<td style="text-align: left;">4,909</td>
+<td style="text-align: left;">149,349</td>
+<td style="text-align: left;">8,466</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">high (25-30)</td>
 <td style="text-align: left;">Test</td>
-<td style="text-align: left;">7,462</td>
-<td style="text-align: left;">1,228</td>
+<td style="text-align: left;">39,585</td>
+<td style="text-align: left;">2,118</td>
 </tr>
 </tbody>
 </table>
@@ -270,6 +271,75 @@ graph TD
 </details>
 <div class="cell-output-display">
 <ul>
+<li>dtb.pop</li>
+<li>dtb.german.hip.hop</li>
+<li>dtb.blues.rock</li>
+<li>dtb.vocal.jazz</li>
+<li>dtb.classical</li>
+<li>dtb.soft.rock</li>
+<li>dtb.classic.schlager</li>
+<li>dtb.singer.songwriter</li>
+<li>dtb.operatic.pop</li>
+<li>dtb.canadian.pop</li>
+<li>dtb.classic.rock</li>
+<li>dtb.r.b</li>
+<li>dtb.rock</li>
+<li>dtb.progressive.rock</li>
+<li>dtb.mellow.gold</li>
+<li>dtb.psychedelic.rock</li>
+<li>dtb.latin.pop</li>
+<li>dtb.modern.rock</li>
+<li>dtb.europop</li>
+<li>dtb.album.rock</li>
+<li>dtb.hard.rock</li>
+<li>dtb.alternative.rock</li>
+<li>dtb.permanent.wave</li>
+<li>dtb.punk</li>
+<li>dtb.new.wave.pop</li>
+<li>dtb.liedermacher</li>
+<li>dtb.metal</li>
+<li>dtb.german.rock</li>
+<li>dtb.schlager</li>
+<li>dtb.alternative.metal</li>
+<li>dtb.hip.hop</li>
+<li>dtb.glam.metal</li>
+<li>dtb.dance.pop</li>
+<li>dtb.austropop</li>
+<li>dtb.german.pop</li>
+<li>dtb.synthpop</li>
+<li>dtb.indie.rock</li>
+<li>dtb.other</li>
+<li>dtb.volksmusik</li>
+<li>dtb.new.romantic</li>
+<li>dtb.new.wave</li>
+<li>dtb.eurodance</li>
+<li>dtb.german.techno</li>
+<li>dtb.britpop</li>
+<li>dtb.german.metal</li>
+<li>dtb.discofox</li>
+<li>dtb.nu.metal</li>
+<li>dtb.speed.metal</li>
+<li>dtb.german.punk</li>
+<li>dtb.neue.deutsche.harte</li>
+<li>dtb.death.metal</li>
+<li>dtb.industrial.metal</li>
+<li>dtb.power.metal</li>
+<li>dtb.progressive.metal</li>
+<li>dtb.electronica</li>
+<li>dtb.pop.dance</li>
+<li>dtb.rap</li>
+<li>dtb.symphonic.metal</li>
+<li>dtb.german.indie</li>
+<li>dtb.post.grunge</li>
+<li>dtb.chamber.pop</li>
+<li>dtb.edm</li>
+<li>dtb.deutschrock</li>
+<li>dtb.oldschool.deutschrap</li>
+<li>dtb.indietronica</li>
+<li>dtb.gothic.metal</li>
+<li>dtb.neo.mellow</li>
+<li>dtb.medieval.rock</li>
+<li>dtb.german.alternative.rap</li>
 <li>track.s.id</li>
 <li>artist.s.id</li>
 <li>artist.s.popularity</li>
@@ -292,12 +362,12 @@ graph TD
 <li>track.s.explicitlyrics</li>
 <li>track.s.popularity</li>
 <li>track.s.duration</li>
-<li>album.mb.language</li>
 <li>artist.mb.type</li>
 <li>artist.mb.gender</li>
 <li>artist.mb.area</li>
 <li>artist.mb.birthyear</li>
 <li>artist.mb.dead</li>
+<li>artist.mb.origin</li>
 <li>track.ab.p.danceable</li>
 <li>track.ab.p.female</li>
 <li>track.ab.p.acoustic</li>
@@ -320,6 +390,53 @@ graph TD
 <li>track.ab.tonal.chordsnumberrate</li>
 <li>track.ab.tonal.mode</li>
 <li>track.ab.tonal.keystrength</li>
+<li>track.ab.p.drtmd.alternative</li>
+<li>track.ab.p.drtmd.blues</li>
+<li>track.ab.p.drtmd.electronic</li>
+<li>track.ab.p.drtmd.folk.country</li>
+<li>track.ab.p.drtmd.funk.soul.rnb</li>
+<li>track.ab.p.drtmd.jazz</li>
+<li>track.ab.p.drtmd.pop</li>
+<li>track.ab.p.drtmd.rap.hiphop</li>
+<li>track.ab.p.drtmd.rock</li>
+<li>track.ab.p.eltrc.ambient</li>
+<li>track.ab.p.eltrc.drumandbass</li>
+<li>track.ab.p.eltrc.house</li>
+<li>track.ab.p.eltrc.techno</li>
+<li>track.ab.p.eltrc.trance</li>
+<li>track.ab.p.rosa.classical</li>
+<li>track.ab.p.rosa.dance</li>
+<li>track.ab.p.rosa.hiphop</li>
+<li>track.ab.p.rosa.jazz</li>
+<li>track.ab.p.rosa.pop</li>
+<li>track.ab.p.rosa.rhythmandblues</li>
+<li>track.ab.p.rosa.rock</li>
+<li>track.ab.p.rosa.speech</li>
+<li>track.ab.p.tzntk.blues</li>
+<li>track.ab.p.tzntk.classical</li>
+<li>track.ab.p.tzntk.country</li>
+<li>track.ab.p.tzntk.disco</li>
+<li>track.ab.p.tzntk.hiphop</li>
+<li>track.ab.p.tzntk.jazz</li>
+<li>track.ab.p.tzntk.metal</li>
+<li>track.ab.p.tzntk.pop</li>
+<li>track.ab.p.tzntk.reggae</li>
+<li>track.ab.p.tzntk.rock</li>
+<li>track.ab.p.ismir.chachacha</li>
+<li>track.ab.p.ismir.jive</li>
+<li>track.ab.p.ismir.quickstep</li>
+<li>track.ab.p.ismir.rumbaamerican</li>
+<li>track.ab.p.ismir.rumbainternational</li>
+<li>track.ab.p.ismir.rumbamisc</li>
+<li>track.ab.p.ismir.samba</li>
+<li>track.ab.p.ismir.tango</li>
+<li>track.ab.p.ismir.viennesewaltz</li>
+<li>track.ab.p.ismir.waltz</li>
+<li>track.ab.p.mirex.aggressive</li>
+<li>track.ab.p.mirex.humorous</li>
+<li>track.ab.p.mirex.literate</li>
+<li>track.ab.p.mirex.passionate</li>
+<li>track.ab.p.mirex.rollicking</li>
 <li>track.dz.rank</li>
 <li>track.dz.tempo</li>
 <li>track.dz.loudness</li>
@@ -347,6 +464,7 @@ graph TD
 <li>label.med.artist.popularity</li>
 <li>label.med.album.popularity</li>
 <li>label.med.track.popularity</li>
+<li>artist.s.genres</li>
 <li>n_NA</li>
 </ul>
 </div>
@@ -362,79 +480,196 @@ graph TD
 </details>
 <div class="cell-output-display">
 <ul>
+<li>dtb.schlager</li>
+<li>dtb.metal</li>
+<li>dtb.vocal.jazz</li>
+<li>dtb.power.metal</li>
+<li>dtb.german.hip.hop</li>
+<li>dtb.classic.schlager</li>
 <li>track.s.acousticness</li>
 <li>track.s.speechiness</li>
-<li>track.s.danceability</li>
 <li>artist.mb.birthyear</li>
-<li>label.med.track.popularity</li>
-<li>track.language</li>
-<li>track.s.energy</li>
-<li>track.s.instrumentalness</li>
-<li>label.med.artist.popularity</li>
 <li>track.s.explicitlyrics</li>
-<li>label.med.album.popularity</li>
+<li>label.med.artist.popularity</li>
+<li>track.language</li>
+<li>track.s.danceability</li>
 <li>artist.s.followers</li>
+<li>label.med.track.popularity</li>
+<li>track.s.instrumentalness</li>
+<li>label.med.album.popularity</li>
+<li>dtb.speed.metal</li>
 <li>artist.s.popularity</li>
-<li>track.s.valence</li>
-<li>track.s.loudness</li>
+<li>track.s.energy</li>
+<li>dtb.electronica</li>
+<li>dtb.german.metal</li>
+<li>dtb.german.techno</li>
+<li>dtb.hip.hop</li>
+<li>dtb.hard.rock</li>
+<li>dtb.death.metal</li>
+<li>dtb.alternative.rock</li>
 <li>track.is.dach</li>
-<li>track.s.duration</li>
 <li>album.s.releaseyear</li>
-<li>album.s.totaltracks</li>
+<li>dtb.gothic.metal</li>
+<li>dtb.alternative.metal</li>
+<li>track.dz.firstartist.followers</li>
+<li>dtb.rap</li>
+<li>dtb.rock</li>
+<li>track.s.loudness</li>
 <li>track.dz.firstartist.nalbums</li>
 <li>artist.mb.area</li>
 <li>track.dz.album.explicitlyrics</li>
+<li>album.s.totaltracks</li>
 <li>album.s.popularity</li>
-<li>track.dz.loudness</li>
-<li>track.s.tempo</li>
-<li>track.s.popularity</li>
-<li>track.dz.firstartist.followers</li>
-<li>track.s.liveness</li>
+<li>track.s.valence</li>
+<li>dtb.classic.rock</li>
+<li>dtb.permanent.wave</li>
+<li>dtb.symphonic.metal</li>
+<li>dtb.pop</li>
+<li>track.ab.p.rosa.rock</li>
+<li>dtb.pop.dance</li>
+<li>track.s.duration</li>
+<li>dtb.glam.metal</li>
+<li>dtb.eurodance</li>
+<li>dtb.german.pop</li>
 <li>track.dz.album.followers</li>
+<li>dtb.dance.pop</li>
+<li>dtb.industrial.metal</li>
+<li>track.s.popularity</li>
+<li>dtb.german.rock</li>
+<li>dtb.singer.songwriter</li>
+<li>dtb.album.rock</li>
+<li>artist.mb.origin</li>
+<li>dtb.edm</li>
 <li>track.dz.album.duration</li>
+<li>track.ab.p.rosa.dance</li>
+<li>dtb.modern.rock</li>
+<li>track.ab.p.rosa.jazz</li>
 <li>track.ab.rhythm.onsetrate</li>
+<li>track.dz.loudness</li>
+<li>dtb.other</li>
+<li>dtb.post.grunge</li>
 <li>track.dz.rank</li>
-<li>track.ab.p.bright</li>
-<li>lyrics.distinct_words_ratio</li>
-<li>track.ab.tonal.chordchangerate</li>
-<li>lyrics.sentiment</li>
-<li>track.ab.p.sad</li>
-<li>track.ab.rhythm.danceability</li>
-<li>track.ab.p.acoustic</li>
-<li>track.ab.low.dynamiccomplexity</li>
-<li>track.ab.p.female</li>
-<li>lyrics.nrc_negative</li>
-<li>track.ab.p.aggressive</li>
-<li>lyrics.repeated_lines_ratio</li>
-<li>track.ab.p.tonal</li>
-<li>track.ab.p.electronic</li>
-<li>lyrics.nrc_anger</li>
-<li>track.ab.tonal.keystrength</li>
-<li>track.ab.p.voice</li>
-<li>track.ab.p.danceable</li>
-<li>track.ab.p.relaxed</li>
-<li>track.ab.tonal.chordsnumberrate</li>
-<li>track.ab.p.happy</li>
-<li>track.ab.low.loudness</li>
-<li>track.ab.rhythm.tempo</li>
-<li>lyrics.nrc_fear</li>
-<li>track.s.key</li>
-<li>track.ab.p.party</li>
-<li>lyrics.nrc_disgust</li>
-<li>track.dz.tempo</li>
-<li>artist.mb.gender</li>
-<li>lyrics.nrc_positive</li>
+<li>dtb.volksmusik</li>
+<li>track.s.tempo</li>
 <li>artist.mb.dead</li>
+<li>dtb.discofox</li>
+<li>dtb.soft.rock</li>
+<li>track.ab.p.acoustic</li>
+<li>track.ab.p.danceable</li>
+<li>track.ab.p.electronic</li>
+<li>dtb.liedermacher</li>
+<li>track.ab.tonal.chordchangerate</li>
+<li>dtb.neue.deutsche.harte</li>
+<li>track.ab.p.eltrc.ambient</li>
+<li>dtb.progressive.metal</li>
+<li>dtb.progressive.rock</li>
+<li>track.ab.p.bright</li>
+<li>track.ab.p.female</li>
+<li>lyrics.distinct_words_ratio</li>
+<li>track.ab.p.rosa.pop</li>
+<li>track.ab.p.rosa.rhythmandblues</li>
+<li>artist.mb.gender</li>
+<li>dtb.r.b</li>
+<li>track.ab.p.eltrc.trance</li>
+<li>track.ab.rhythm.danceability</li>
+<li>track.s.liveness</li>
+<li>dtb.medieval.rock</li>
+<li>dtb.punk</li>
+<li>dtb.blues.rock</li>
+<li>dtb.nu.metal</li>
+<li>lyrics.sentiment</li>
+<li>track.ab.p.rosa.hiphop</li>
+<li>track.ab.p.voice</li>
+<li>track.ab.p.rosa.classical</li>
+<li>track.ab.p.aggressive</li>
+<li>track.ab.p.tonal</li>
+<li>track.ab.p.mirex.aggressive</li>
+<li>track.ab.p.mirex.rollicking</li>
+<li>track.ab.p.eltrc.house</li>
+<li>dtb.new.wave.pop</li>
+<li>track.ab.p.sad</li>
+<li>track.ab.p.drtmd.alternative</li>
+<li>track.ab.p.drtmd.folk.country</li>
+<li>track.ab.p.drtmd.electronic</li>
+<li>track.ab.tonal.chordsnumberrate</li>
+<li>track.ab.low.dynamiccomplexity</li>
+<li>dtb.oldschool.deutschrap</li>
+<li>track.ab.p.relaxed</li>
+<li>track.ab.p.rosa.speech</li>
+<li>track.ab.p.drtmd.blues</li>
+<li>track.ab.p.mirex.humorous</li>
+<li>track.ab.p.ismir.viennesewaltz</li>
+<li>track.ab.p.happy</li>
+<li>dtb.mellow.gold</li>
+<li>lyrics.nrc_negative</li>
+<li>track.ab.p.drtmd.jazz</li>
+<li>track.ab.p.eltrc.techno</li>
+<li>track.ab.p.ismir.rumbaamerican</li>
+<li>track.ab.p.ismir.tango</li>
+<li>track.ab.p.ismir.chachacha</li>
+<li>track.ab.tonal.keystrength</li>
+<li>track.ab.p.drtmd.rock</li>
+<li>track.ab.p.party</li>
+<li>track.ab.low.loudness</li>
+<li>track.ab.p.mirex.literate</li>
+<li>track.ab.p.drtmd.funk.soul.rnb</li>
+<li>track.ab.p.ismir.samba</li>
+<li>track.ab.rhythm.tempo</li>
+<li>track.ab.p.ismir.jive</li>
+<li>track.ab.p.ismir.waltz</li>
+<li>track.ab.p.drtmd.pop</li>
+<li>lyrics.repeated_lines_ratio</li>
+<li>track.ab.p.ismir.rumbainternational</li>
+<li>track.ab.p.drtmd.rap.hiphop</li>
+<li>track.ab.p.ismir.rumbamisc</li>
+<li>track.ab.p.eltrc.drumandbass</li>
+<li>track.ab.p.mirex.passionate</li>
+<li>dtb.austropop</li>
+<li>track.ab.p.ismir.quickstep</li>
+<li>dtb.german.alternative.rap</li>
+<li>track.dz.tempo</li>
+<li>dtb.latin.pop</li>
+<li>dtb.indietronica</li>
+<li>lyrics.nrc_fear</li>
+<li>dtb.europop</li>
+<li>dtb.chamber.pop</li>
+<li>lyrics.nrc_anger</li>
+<li>dtb.german.indie</li>
+<li>track.s.key</li>
+<li>lyrics.nrc_positive</li>
+<li>dtb.german.punk</li>
 <li>track.s.mode</li>
-<li>lyrics.nrc_sadness</li>
-<li>lyrics.nrc_trust</li>
-<li>lyrics.nrc_anticipation</li>
+<li>lyrics.nrc_disgust</li>
+<li>dtb.neo.mellow</li>
+<li>dtb.indie.rock</li>
+<li>dtb.synthpop</li>
+<li>dtb.new.romantic</li>
+<li>dtb.operatic.pop</li>
+<li>dtb.psychedelic.rock</li>
+<li>dtb.canadian.pop</li>
+<li>dtb.new.wave</li>
 <li>track.s.timesignature</li>
+<li>dtb.britpop</li>
+<li>track.ab.p.tzntk.rock</li>
+<li>dtb.classical</li>
+<li>lyrics.nrc_trust</li>
 <li>lyrics.nrc_joy</li>
-<li>lyrics.nrc_surprise</li>
+<li>track.ab.p.tzntk.disco</li>
+<li>track.ab.p.tzntk.blues</li>
+<li>track.ab.p.tzntk.jazz</li>
+<li>track.ab.p.tzntk.pop</li>
 <li>track.is.instrumental</li>
+<li>dtb.deutschrock</li>
+<li>lyrics.nrc_anticipation</li>
+<li>track.ab.p.tzntk.country</li>
+<li>lyrics.nrc_sadness</li>
+<li>track.ab.p.tzntk.classical</li>
 <li>track.ab.tonal.key</li>
+<li>track.ab.p.tzntk.reggae</li>
+<li>track.ab.p.tzntk.metal</li>
+<li>track.ab.p.tzntk.hiphop</li>
 <li>track.ab.tonal.mode</li>
+<li>lyrics.nrc_surprise</li>
 </ul>
 </div>
 </div>
@@ -479,10 +714,10 @@ graph TD
 <tbody>
 <tr class="odd">
 <td style="text-align: right;">1000</td>
-<td style="text-align: right;">5</td>
+<td style="text-align: right;">15</td>
 <td style="text-align: right;">20</td>
 <td style="text-align: right;">50</td>
-<td style="text-align: right;">73</td>
+<td style="text-align: right;">190</td>
 <td style="text-align: left;">impurity</td>
 <td style="text-align: left;">gini</td>
 <td style="text-align: left;">Probability estimation</td>
@@ -527,10 +762,10 @@ graph TD
 <tbody>
 <tr class="odd">
 <td style="text-align: right;">1000</td>
-<td style="text-align: right;">5</td>
+<td style="text-align: right;">15</td>
 <td style="text-align: right;">20</td>
 <td style="text-align: right;">50</td>
-<td style="text-align: right;">73</td>
+<td style="text-align: right;">190</td>
 <td style="text-align: left;">impurity</td>
 <td style="text-align: left;">gini</td>
 <td style="text-align: left;">Probability estimation</td>
